Update to Spring 6.2 / Servlet 6.0